--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     margin: 20px;
     background-color: #1f1d1d;
     color: white;
-    padding-top: 100px;
+    padding-top: 70px;
 }
 
 h1 {
@@ -53,4 +53,41 @@ h1 {
     background-color: #fff;
     color: #000;
     box-shadow: 0 0 10px #d8dadb;
+}
+.user-card {
+  background-color: #444;
+  border-radius: 15px;
+  padding: 20px;
+  width: 300px;
+  margin: 20px auto;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+}
+
+.user-card h3 {
+  margin: 10px 0;
+  color: #fff;
+}
+
+.user-card p {
+  margin: 5px 0;
+  color: #ddd;
+}
+
+.user-card a {
+  display: inline-block;
+  margin-top: 10px;
+  color: #d8dadb;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.user-card a:hover {
+  color: white;
+  text-decoration: underline;
+}
+
+.avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
 }
